argoproj/n8n/service-n8n.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - name: http
      protocol: TCP
      port: 5678
      targetPort: 5678
